2012-05-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: New root menu.

2012-05-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (rotate-root-geometry-next)
	(rotate-root-geometry-previous): New second mode binding to change
	root geometry.

2012-05-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp: Remove the *current-child* variable
	and use a setfable function (current-child) instead.
	(current-child-setter): Store root current child before apllying
	current child change.

2012-05-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp: Use xdpyinfo/xinerama informations
	instead of xrandr informations.

2012-05-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp : Use only one list for root
	management.
	(*root*): Root management API simplification.

2012-04-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp: Big change to replace *current-root*
	variable to support multiple root.

2012-04-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/tools.lisp (add-new-hook, add-hook): New macro. Do not
	duplicate hooks by default. Use add-new-hook if you want to
	duplicate them.

2012-04-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-corner.lisp (wait-window-in-query-tree): Add a limit
	of try to wait the command window.

2012-02-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (place-frames-from-xrandr)
	(swap-frame-geometry, rotate-frame-geometry): New helper functions
	for multiple physical screen.
	(jump-to-slot, add-frame-in-parent-frame): Change *current-root*
	only when needed.

2012-01-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/*.lisp: Use create-symbol and create-symbol-in-package
	instead of the shorter symb. (Thanks Aad Versteden).

	* src/bindings-second-mode.lisp (set-default-second-keys): New