@@ -381,40 +381,3 @@
                                                        (middle-child-x child) (child-y2 child))))))
 
 
-
-
-(defun select-generic-root (fun)
-  (no-focus)
-  (let* ((current-root (find-root (current-child)))
-         (parent (find-parent-frame (root-original current-root))))
-    (setf (frame-child parent) (funcall fun (frame-child parent)))
-    (let ((new-root (find-root (frame-selected-child parent))))
-      (setf (current-child) (aif (root-current-child new-root)
-                                 it
-                                 (frame-selected-child parent)))))
-  (show-all-children t)
-  (leave-second-mode))
-
-(defun select-next-root ()
-  "Select the next root"
-  (select-generic-root #'rotate-list))
-
-(defun select-previous-root ()
-  "Select the previous root"
-  (select-generic-root #'anti-rotate-list))
-
-
-(defun rotate-root-geometry-generic (fun)
-  (no-focus)
-  (funcall fun)
-  (show-all-children t)
-  (leave-second-mode))
-
-
-(defun rotate-root-geometry-next ()
-  "Rotate root geometry to next root"
-  (rotate-root-geometry-generic #'rotate-root-geometry))
-
-(defun rotate-root-geometry-previous ()
-  "Rotate root geometry to previous root"
-  (rotate-root-geometry-generic #'anti-rotate-root-geometry))
